--- a/.abf.yml
+++ b/.abf.yml
@@ -1,4 +1,5 @@
 removed_sources:
   p11-kit-0.14.tar.gz: 02f7139fb1ee3a0d6ef4566f05630bfa4c5606c9
-sources:
   p11-kit-0.18.2.tar.gz: 27986eedf5307bbf90ffc4de47f5f380384b18f3
+sources:
+  p11-kit-0.20.2.tar.gz: 87b6006be38304b56940c717694557d4e39542d3
