--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  0.23.12.tar.gz: da678afbea897fe39fda22d8cf1add5a52a09b11
+  p11-kit-0.23.14.tar.gz: 30cab1d4b716022e6918f9a49976609c425f9cfc
