--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  0.23.22.tar.xz: 339e5163ed50a9984a74739b9207ea8cd77fa7e2
+  p11-kit-0.24.0.tar.xz: 66380b519caa58d49f31f7fb4aae7b14e91b1a40
